# pcap-analyzer

./: LICENSE  README.md
backend/: CMakeLists.txt  main.cpp
backend/input/: input.pcap
frontend/: jsconfig.json  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.jsx
frontend/src/components/: Dashboard.css  Dashboard.jsx  FileUploader.jsx  Header.css  Header.jsx  NetworkGraph.css  NetworkGraph.jsx  PacketDetail.css  PacketDetail.jsx  PacketTable.css  PacketTable.jsx
frontend/src/components/charts/: NetworkGraph.jsx  PacketSizeChart.css  PacketSizeChart.jsx  ProtocolDistribution.css  ProtocolDistribution.jsx  SizeHistogram.css  SizeHistogram.jsx
frontend/src/hooks/: usePacketData.js
frontend/src/services/: api.js
frontend/src/styles/: App.css  index.css
frontend/src/utils/: formatters.js
